# go-analyzer

./: .gitignore  ARCHITECTURE.md  DESIGN.md  LICENSE  README.md  ROADMAP.md  _bench_config.py  _check_install.py  _test_analysis_loop.py  _test_timeout.py  analysis_config.cfg  config.yaml  deploy.bat  deploy_worker.sh  pyproject.toml  rebuild_venv.sh  start_coordinator.bat  start_worker.bat
kata-go/windows/: analysis_config.cfg
kata-go/windows/v1.16.4/: analysis_config.cfg
katago_install/: README.txt  analysis_config.cfg  batch_analyze.py
remote/: analysis_config.cfg  deploy.bat  go_analyzer-0.4.0-py3-none-any.whl  go_analyzer-0.4.1-py3-none-any.whl  go_analyzer-0.4.4-py3-none-any.whl  go_analyzer-0.5.0-py3-none-any.whl  go_analyzer-0.5.1-py3-none-any.whl  start_worker.bat
scripts/: go-analyzer-tune.sh
src/go_analysis/: __init__.py  analysis_format.py  benchmark.py  calibrate.py  cli.py  config.py  dataset.py  discovery.py  env_collector.py  go_predict.py  main.py  model_registry.py  model_v1_archive.py  model_v2.py  models.py  monitor.py  parallel.py  pipeline.py  router.py  sgf_parser.py  sgf_validator.py  storage.py  train.py  visits.py  worker_deploy.py  worker_http.py  worker_local.py  worker_server.py  ynwqxh-com-chain.pem  yunyi.py
src/go_analysis/analysis/: __init__.py  environment.py  pipeline.py  sgf_parser.py
src/go_analysis/analyzer/: __init__.py  base.py  base_adapter.py  batch_adapter.py  core.py  discovery.py  local.py  pool.py  process.py  protocol.py  remote.py  simple_analyzer.py  streaming.py  task.py  tuning.py  windows.py
src/go_analysis/api/: __init__.py  cli.py  interface.py
src/go_analysis/data/: __init__.py  format.py
src/go_analysis/distributed/: __init__.py  coordinator.py  deploy.py  sync.py  worker.py
tests/: GO_Plan.ipynb  __init__.py  test_adapter.py  test_analysis.sh  test_analyzer_init.py  test_full2_kata.py  test_full_kata.py  test_persistent.py  test_pool.py  test_python.ipynb  test_v16.py
training/: SAMPLING.md  download_sgf.py  gtl_download.py  kgs_download.py  kgs_pro.py  ogs_pro.py  unified_download.py
(+17 files in other folders)
