[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "go-analyzer"
version = "0.4.4"
description = "Go game strength analysis — SGF→KataGo→NPZ→Evaluation + Distributed framework"
authors = [{ name = "Tom Zhao", email = "ahill.zhao@gmail.com" }]
license = { text = "MIT" }
readme = "DESIGN.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21",
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
torch = ["torch>=2.0", "tqdm>=4.0"]
dev = ["pytest", "build"]

[project.urls]
homepage = "https://github.com/ahillzhao-msn/GCOL"
repository = "https://github.com/ahillzhao-msn/GCOL"

[project.scripts]
go-analyzer = "go_analysis.api.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
